--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,32 +14,13 @@ html{
     overflow-x: hidden;
 }
 body{
-    margin-left: 20px;
     overflow-x: hidden;
 }
-
-.title{
-    margin-left: 20px;
-}
-
-.input-head{
-    padding: 10px;
-    font-size: 20px;
-}
-
-.section-btn{
-    border: none;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 10px;
-    font-size: 15px;
-    cursor: pointer;
-    background-color: white;
-    margin-bottom: 10px;
-}
-
 .section{
-    padding: 10px;
-    background-color: rgb(239, 243, 243);
-    margin-top: 5px;
+    margin-right: 10px;
+}
+
+.custom--bg--pink{
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.2),6px 6px 8px rgba(108, 15, 69, 0.1),
+    inset 2px 2px 4px rgba(239, 236, 236, 0.456),inset 6px 6px 8px rgba(239, 233, 239, 0.806);
 }
