--- a/src/css/Dataframe.css
+++ b/src/css/Dataframe.css
@@ -70,14 +70,14 @@ table {
   th {
     background-color: #f2f2f2;
   }
-
+/* 
   tr:nth-child(even) {
     background-color: #f2f2f2;
   }
 
   tr:nth-child(odd) {
     background-color: #ffffff;
-  }
+  } */
 
   .button-checkbox {
     display: inline-block;
